	* Sid flag in options is d not S. SF#791537
	* Fixed typo in checking ss_family SF#845292
	* Lines not truncated using UTF-8 SF Patch: #757164 Debian: #151523
	* Case insensitve matching with -I flags SF Patch: #740662
	* inode and devices use ino_t and dev_t SF#: 
	* Allow pstree to use ASCII characters with -A flag, patch by
	  Branden Robinson Debian: #240973

2004-04-05  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add m4.
	(SUBDIRS): Remove intl.
	(ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): Add config.rpath.
	* configure.in (AC_CONFIG_FILES): Add m4/Makefile.

Changes in 21.4
===============
2003-11-28 Craig Small <csmall@small.dropbear.id.au>
	* Typos in killall.1 fixed Closes Debian: #198189
	* fuser -ki now tells user default is N Closes Debian: #197356
	* pstree -a doesn't print space at end of line Closes Debian: #182099
	* Works with new sort flags +2 -> -k 3 Thankyou Andrew Walrond
	* pstree.x11 now just pstree with a trick Closes Debian: #201042
	* Icons for pstree, thankyou Tatlin! Closes Debian: #192636
	* Removed message if no processes found, 
	* Excess blanks in fuser removed.
	* Two lines above close Debian: #212795


Changes in 21.3
===============
2003-04-03 Craig Small <csmall@small.dropbear.id.au>
	* SELinux SID selection uses -d instead of -S to stop the confusion of
	  signal names, no flags with upper case letters ok?
	  Closes Debian: #193790, #163360
	* Doesnt segfault on long cmdnames, thanks Ben Low Closes Debian: #187241
	* Updated libtool and friends so it works on new coreutils

2003-04-03 Craig Small <csmall@small.dropbear.id.au>
	* More fixes for types, also some GCC 3.2 fixes, thanks to
	  Stefan at SuSE

2002-09-27 Craig Small <csmall@small.dropbear.id.au>
	* Changed a long to a long long in pstree.

Changes in 21.2
===============
2002-09-27 Craig Small <csmall@small.dropbear.id.au>
	* Big bug in pstree, pstree -a would often fail badly. swapped variable
	  not set.