@@ -4,7 +4,7 @@ fuser \- identify processes using files or sockets
 .SH SYNOPSIS
 .ad l
 .B fuser
-.RB [ \-a | \-s ]
+.RB [ \-a | \-s | \-c ]
 .RB [ \-4 | \-6 ]
 .RB [ \-n\ \fIspace ]
 .RB [ \-\fIsignal\fB ]
@@ -50,10 +50,14 @@ are optional, but commas in front of missing fields must be present:
 
 Either symbolic or numeric values can be used for IP addresses and port
 numbers.
+.PP
+\fBfuser\fP outputs only the PIDs to stdout, everything else is sent to stderr.
 .SH OPTIONS
 .IP \fB\-a\fP
 Show all files specified on the command line. By default, only files that are
 accessed by at least one process are shown.
+.IP \fB\-c\fP
+Same as \-m option, used for POSIX compatibility.
 .IP \fB\-k\fP
 Kill processes accessing the file. Unless changed with \fB-\fP\fIsignal\fP,
 SIGKILL is sent. An \fBfuser\fP process never kills itself, but may kill
